added gif for illustration

--- a/index.html
+++ b/index.html
@@ -243,9 +243,9 @@
             <span onclick="this.parentElement.style.display='none'" class="closeBtn"> &#10005;</span>
 
             <form id = "emailForm" action="mailto:leungcheukkei@gmail.com" method="post" enctype="text/plain">
-              <p class="formLabel">First name </p></label><input type="text" name="firstName"><br>
-              <p class="formLabel">Last name </p><input type="text" name="lastName"><br>
-              <p class="formLabel">Email </p><input type="email" name="email"><br>
+              <p class="formLabel">First name </p></label><input type="text" name="firstName">
+              <p class="formLabel">Last name </p><input type="text" name="lastName">
+              <p class="formLabel">Email </p><input type="email" name="email">
               <p class="formLabel">Message </p><textarea name="message" cols="20" rows="4"></textarea><br>
               <input type="submit" name="submit" value="Send">
             </form>
